# avatar-walrus

./: .gitignore  .system_pids  demo130.py  index.html  once_run_cluster.sh  requirements.txt  wrk_rpc_test.lua
block-producer/: Cargo.toml  README.md  USAGE.md
block-producer/data/: block_producer_state_blockchain-txs.redb  test_contract_deploy.redb  test_precompiled_contract.redb  test_stage2.redb
block-producer/examples/: test_redb_stage1.rs  test_revm_deploy_contract_stage2.rs  test_revm_stage2.rs  test_transaction_validation_stage3.rs  test_trie_calculation_stage4.rs
block-producer/scripts/: monitor_blocks.sh  send_test_transaction.sh  send_test_transaction_fixed.sh  start_full_system.sh  verify_database.sh
block-producer/scripts/contracts/: MiniUSDT.json  MiniUSDT.sol  compile.js  package-lock.json  package.json
block-producer/src/: lib.rs  main.rs
block-producer/src/db/: cache.rs  kvdb.rs  mod.rs  redb_db.rs  traits.rs  walrus_db.rs
block-producer/src/executor/: block_executor.rs  mod.rs  receipts.rs  revm_adapter.rs  transaction.rs
block-producer/src/schema/: account.rs  block.rs  code.rs  mod.rs  storage.rs
block-producer/src/trie/: builder.rs  mod.rs  proof.rs  state_root.rs  storage_root.rs
block-producer/src/utils/: hash.rs  merkle.rs  mod.rs  serialization.rs
block-producer/src/wallet/: mod.rs
block-producer/tests/: test_redb.rs
distributed-walrus/src/: client.rs
docs/: block-executor-design.md  blockchain-design.md  reth-advanced-details.md  reth-analysis-simplified.md  reth-analysis.md  reth-block-producing.md  reth-revm集成代码示例.md  reth-共识层与执行层交互机制详解.md  reth-区块构建执行验证系统报告.md  reth-如何使用revm完整分析.md  reth-存储槽详解.md  reth-布隆过滤器完整分析.md  revm-analysis.md  revm-外部边界详细分析.md  single-node-test-report.md  start-walrus-cluster.md
rpc-gateway/: Cargo.toml  METAMASK_SETUP.md  README.md  test.sh  test_rpc.sh
rpc-gateway/src/: error.rs  main.rs  metrics.rs
rpc-gateway/src/utils/: error.rs  mod.rs
scripts/: start_walrus_cluster.sh  start_walrus_cluster_quick.sh  visualize_batch_benchmark_noninteractive.py
src/wal/runtime/: walrus.rs  walrus_read.rs
tx-generator/: Cargo.toml  README.md
tx-generator/src/: main.rs
