[package]
name = "block-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Walrus 客户端
distributed-walrus = { path = "../distributed-walrus" }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 十六进制编解码
hex = "0.4"

# 命令行参数
clap = { version = "4.0", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# SHA256 哈希
sha2 = "0.10"
