[package]
name = "block-producer"
version = "0.1.0"
edition = "2021"

[lib]
name = "block_producer"
path = "src/lib.rs"

[[bin]]
name = "block-producer"
path = "src/main.rs"

[dependencies]
# === Walrus 客户端 ===
distributed-walrus = { path = "../distributed-walrus" }
walrus-rust = { path = "../" }

# === 异步运行时 ===
tokio = { version = "1", features = ["full"] }

# === 序列化/反序列化 ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# === 十六进制编解码 ===
hex = "0.4"

# === 命令行参数 ===
clap = { version = "4.0", features = ["derive"] }

# === 日志 ===
tracing = "0.1"
tracing-subscriber = "0.3"

# === 错误处理 ===
anyhow = "1.0"
thiserror = "1.0"

# === 时间处理 ===
chrono = { version = "0.4", features = ["serde"] }

# === 哈希工具 ===
sha2 = "0.10"

# === EVM & 以太坊类型 ===
revm = { version = "12", features = ["std", "serde"] }
alloy-primitives = { version = "0.7", features = ["serde"] }
alloy-trie = "0.4"
alloy-rlp = "0.3"

# === 并发与缓存 ===
rayon = "1.10"           # 并行计算状态根
parking_lot = "0.12"     # 高性能锁
lru = "0.12"             # LRU 缓存

# === 其他工具 ===
bytes = "1.5"
redb = "3.1.0"

[dev-dependencies]
tempfile = "3.14"
