[package]
name = "rpc-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Walrus 客户端
distributed-walrus = { path = "../distributed-walrus" }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# JSON-RPC 服务器 (可以选择 jsonrpsee 或 jsonrpc-core)
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RLP 编码解码库（用于解析原始交易）
alloy-rlp = { version = "0.3.12", features = ["derive"] }
alloy-primitives = { version = "0.8", features = ["rlp"] }

# 命令行参数
clap = { version = "4.0", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

hex = "0.4"
sha2 = "0.10"
