[package]
name = "rpc-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Walrus 客户端
distributed-walrus = { path = "../distributed-walrus" }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# JSON-RPC 服务器
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }

# 监控指标
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"

# HTTP 服务器（用于 metrics 端点）
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

# 异步工具
futures = "0.3"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 命令行参数
clap = { version = "4.0", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"

# 工具
hex = "0.4"
sha2 = "0.10"
