[package]
name = "tx-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Alloy - 专业的以太坊 Rust 库 (最新版)
alloy = { version = "1.4.3", features = ["full", "node-bindings", "signer-local"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 命令行参数
clap = { version = "4.0", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 十六进制编解码
hex = "0.4"

# 随机数生成
rand = "0.8"
